Corrigindo erros de mapeamento